--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,8 @@
     "require": {
         "php": "^7.4",
         "braintree/braintree_php": "^5.1",
+        "phpstan/phpstan": "^0.12.30",
+        "squizlabs/php_codesniffer": "^3.5",
         "stripe/stripe-php": "^7.37",
         "vlucas/phpdotenv": "^5.0"
     },
@@ -37,7 +39,10 @@
         }
     },
     "scripts": {
-        "test": "vendor/bin/kahlan"
+        "test": "vendor/bin/kahlan",
+        "phpcs": "vendor/bin/phpcs --standard=PSR12 --colors -s src",
+        "phpcs:fix": "vendor/bin/phpcbf --standard=PSR2 src",
+        "phpstan": "vendor/bin/phpstan analyze -c phpstan.neon src"
     },
     "config": {
         "sort-packages": true
