--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "require": {
         "php": "^7.4",
         "braintree/braintree_php": "^5.1",
+        "nesbot/carbon": "^2.35",
         "phpstan/phpstan": "^0.12.30",
         "squizlabs/php_codesniffer": "^3.5",
         "stripe/stripe-php": "^7.37",
