--- a/composer.json
+++ b/composer.json
@@ -19,15 +19,15 @@
         "php": "^7.4",
         "braintree/braintree_php": "^5.1",
         "nesbot/carbon": "^2.35",
-        "phpstan/phpstan": "^0.12.30",
-        "squizlabs/php_codesniffer": "^3.5",
-        "stripe/stripe-php": "^7.37",
-        "vlucas/phpdotenv": "^5.0"
+        "stripe/stripe-php": "^7.37"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.9",
         "kahlan/kahlan": "^4.7",
-        "phpunit/phpunit": "^9.2"
+        "phpstan/phpstan": "^0.12.30",
+        "phpunit/phpunit": "^9.2",
+        "squizlabs/php_codesniffer": "^3.5",
+        "vlucas/phpdotenv": "^5.0"
     },
     "autoload": {
         "psr-4": {
