--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,13 @@
         "php": "^7.4",
         "braintree/braintree_php": "^5.1",
         "nesbot/carbon": "^2.35",
+        "psr/log": "^1.1",
         "stripe/stripe-php": "^7.37"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.9",
         "kahlan/kahlan": "^4.7",
+        "monolog/monolog": "^2.1",
         "phpstan/phpstan": "^0.12.30",
         "phpunit/phpunit": "^9.2",
         "squizlabs/php_codesniffer": "^3.5",
@@ -41,6 +43,7 @@
     },
     "scripts": {
         "test": "vendor/bin/kahlan",
+        "test:unit": "vendor/bin/kahlan --spec=spec/unit",
         "phpcs": "vendor/bin/phpcs --standard=PSR12 --colors -n -s src",
         "phpcs:fix": "vendor/bin/phpcbf --standard=PSR12 src",
         "phpstan": "vendor/bin/phpstan analyze -c phpstan.neon src"
